--- a/benchmarks/data-lrat/chess-data/Makefile
+++ b/benchmarks/data-lrat/chess-data/Makefile
@@ -4,7 +4,7 @@ VLEVEL = 2
 
 GENERATOR = $(INTERP) ../../chess.py
 SOLVER = $(INTERP) ../../../prototype/solver.py
-CHECKER = ../../../pcaas/lrat-check
+CHECKER = ../../../lrat/lrat-check
 GRABBER = ../../grab_clauses.py
 EXTENSION = lrat
 
@@ -21,7 +21,7 @@ chess-$(N)-column.data:
 	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-column.cnf -s chess-$(N)-column.schedule \
 		-p chess-$(N)-column.order -o chess-$(N)-column.$(EXTENSION) 2>&1 | tee -a chess-$(N)-column.data
 	$(CHECKER) chess-$(N)-column.cnf chess-$(N)-column.$(EXTENSION) | tee -a chess-$(N)-column.data
-	rm -f chess-$(N)-column.$(EXTENSION)
+#	rm -f chess-$(N)-column.$(EXTENSION)
 
 chess-$(N)-noquant.data:
 	$(GENERATOR) -n $(N) -r chess-$(N)-noquant | tee chess-$(N)-noquant.data
