--- a/benchmarks/data-cdcl/chess-data/Makefile
+++ b/benchmarks/data-cdcl/chess-data/Makefile
@@ -9,13 +9,19 @@ DRAT=../../../../drat-trim/drat-trim
 
 
 c: chess-$(N)-cdcl.data
-
+t: chess-$(N)-cdcl-time.data
 
 chess-$(N)-cdcl.data:
 	$(GENERATOR) -n $(N) -r chess-$(N)-cdcl | tee chess-$(N)-cdcl.data
 	$(CDCL) --unsat --no-binary chess-$(N)-cdcl.cnf chess-$(N)-cdcl.drat | tee -a chess-$(N)-cdcl.data
 	$(DRAT) chess-$(N)-cdcl.cnf chess-$(N)-cdcl.drat | tee -a chess-$(N)-cdcl.data
 	rm -f chess-$(N)-cdcl.drat
+
+chess-$(N)-cdcl-time.data:
+	$(GENERATOR) -n $(N) -r chess-$(N)-cdcl | tee chess-$(N)-cdcl-time.data
+	$(CDCL) --unsat --no-binary chess-$(N)-cdcl.cnf chess-$(N)-cdcl.drat | tee -a chess-$(N)-cdcl-time.data
+	rm -f chess-$(N)-cdcl.drat
+
 
 data:
 	$(GRABBER) chess-*-cdcl.data > chess-cdcl.csv
