--- a/qbenchmarks/data-qproof/kbf/Makefile
+++ b/qbenchmarks/data-qproof/kbf/Makefile
@@ -1,11 +1,13 @@
 INTERP = python3
 T = 3
 VLEVEL = 1
+SEED = 1
 
 GENERATOR = ../../kbf/gen-hardKB.py
 VGENERATOR = ../../kbf/gen-hardKB-vorder.py
 QGENERATOR = ../../kbf/gen-hardKB-qorder.py
 REVERSER = ../../reverse.py
+RANDOMIZER = ../../../benchmarks/randomizer.py
 SOLVER = $(INTERP) ../../../qbf/qsolver.py
 CHECKER = ../../../qbf/qchecker.py
 GRABBER = ../../../benchmarks/grab_clauses.py
@@ -15,6 +17,7 @@ vo: kbf-$(T)-vo.data
 rvo: kbf-$(T)-rvo.data
 qo: kbf-$(T)-qo.data
 rqo: kbf-$(T)-rqo.data
+ran: kbf-$(T)-ran-$(SEED).data
 
 kbf-$(T)-vo.data:
 	$(GENERATOR) $(T) > kbf-$(T).qcnf 
@@ -48,12 +51,21 @@ kbf-$(T)-rqo.data:
 	$(CHECKER) -i kbf-$(T).qcnf -p kbf-$(T)-rqo.$(EXTENSION) | tee -a kbf-$(T)-rqo.data
 	rm -f kbf-$(T)-rqo.$(EXTENSION)
 
+kbf-$(T)-ran-$(SEED).data:
+	$(GENERATOR) $(T) > kbf-$(T)-ran-$(SEED).qcnf 
+	$(RANDOMIZER) kbf-$(T)-ran-$(SEED).qcnf $(SEED)
+	$(SOLVER) -v $(VLEVEL) -i kbf-$(T)-ran-$(SEED).qcnf -p kbf-$(T)-ran-$(SEED).order -b \
+		-o kbf-$(T)-ran-$(SEED).$(EXTENSION) | tee kbf-$(T)-ran-$(SEED).data
+	$(CHECKER) -i kbf-$(T)-ran-$(SEED).qcnf -p kbf-$(T)-ran-$(SEED).$(EXTENSION) | tee -a kbf-$(T)-ran-$(SEED).data
+	rm -f kbf-$(T)-ran-$(SEED).$(EXTENSION)
+
 
 data:
 	$(GRABBER) kbf-*-vo.data > kbf-vo.csv
 	$(GRABBER) kbf-*-rvo.data > kbf-rvo.csv
 	$(GRABBER) kbf-*-qo.data > kbf-qo.csv
 	$(GRABBER) kbf-*-rqo.data > kbf-rqo.csv
+	$(GRABBER) kbf-*-ran-*.data > kbf-ran.csv
 
 clean:
 	rm -f *~
