--- a/qbenchmarks/data-qproof/kbf/Makefile
+++ b/qbenchmarks/data-qproof/kbf/Makefile
@@ -9,7 +9,7 @@ QGENERATOR = ../../kbf/gen-hardKB-qorder.py
 REVERSER = ../../reverse.py
 RANDOMIZER = ../../../benchmarks/randomizer.py
 SOLVER = $(INTERP) ../../../qbf/qsolver.py
-CHECKER = ../../../qbf/qchecker.py
+CHECKER = $(INTERP) ../../../qbf/qchecker.py
 GRABBER = ../../../benchmarks/grab_clauses.py
 EXTENSION = qproof
 
@@ -22,7 +22,7 @@ ran: kbf-$(T)-ran-$(SEED).data
 kbf-$(T)-vo.data:
 	$(GENERATOR) $(T) > kbf-$(T).qcnf 
 	$(VGENERATOR) $(T) > kbf-$(T)-v.order 
-	$(SOLVER) -v $(VLEVEL) -i kbf-$(T).qcnf -p kbf-$(T)-v.order -b \
+	$(SOLVER) -m r -v $(VLEVEL) -i kbf-$(T).qcnf -p kbf-$(T)-v.order -b \
 		-o kbf-$(T)-vo.$(EXTENSION) | tee kbf-$(T)-vo.data
 	$(CHECKER) -i kbf-$(T).qcnf -p kbf-$(T)-vo.$(EXTENSION) | tee -a kbf-$(T)-vo.data
 	rm -f kbf-$(T)-vo.$(EXTENSION)
@@ -30,7 +30,7 @@ kbf-$(T)-vo.data:
 kbf-$(T)-rvo.data:
 	$(GENERATOR) $(T) > kbf-$(T).qcnf 
 	$(VGENERATOR) $(T) | $(REVERSER) > kbf-$(T)-rv.order 
-	$(SOLVER) -v $(VLEVEL) -i kbf-$(T).qcnf -p kbf-$(T)-rv.order -b \
+	$(SOLVER) -m r -v $(VLEVEL) -i kbf-$(T).qcnf -p kbf-$(T)-rv.order -b \
 		-o kbf-$(T)-rvo.$(EXTENSION) | tee kbf-$(T)-rvo.data
 	$(CHECKER) -i kbf-$(T).qcnf -p kbf-$(T)-rvo.$(EXTENSION) | tee -a kbf-$(T)-rvo.data
 	rm -f kbf-$(T)-rvo.$(EXTENSION)
@@ -38,7 +38,7 @@ kbf-$(T)-rvo.data:
 kbf-$(T)-qo.data:
 	$(GENERATOR) $(T) > kbf-$(T).qcnf 
 	$(QGENERATOR) $(T) > kbf-$(T)-q.order 
-	$(SOLVER) -v $(VLEVEL) -i kbf-$(T).qcnf -p kbf-$(T)-q.order -b \
+	$(SOLVER) -m r -v $(VLEVEL) -i kbf-$(T).qcnf -p kbf-$(T)-q.order -b \
 		-o kbf-$(T)-qo.$(EXTENSION) | tee kbf-$(T)-qo.data
 	$(CHECKER) -i kbf-$(T).qcnf -p kbf-$(T)-qo.$(EXTENSION) | tee -a kbf-$(T)-qo.data
 	rm -f kbf-$(T)-qo.$(EXTENSION)
@@ -46,7 +46,7 @@ kbf-$(T)-qo.data:
 kbf-$(T)-rqo.data:
 	$(GENERATOR) $(T) > kbf-$(T).qcnf 
 	$(QGENERATOR) $(T) | $(REVERSER) > kbf-$(T)-rq.order 
-	$(SOLVER) -v $(VLEVEL) -i kbf-$(T).qcnf -p kbf-$(T)-rq.order -b \
+	$(SOLVER) -m r -v $(VLEVEL) -i kbf-$(T).qcnf -p kbf-$(T)-rq.order -b \
 		-o kbf-$(T)-rqo.$(EXTENSION) | tee kbf-$(T)-rqo.data
 	$(CHECKER) -i kbf-$(T).qcnf -p kbf-$(T)-rqo.$(EXTENSION) | tee -a kbf-$(T)-rqo.data
 	rm -f kbf-$(T)-rqo.$(EXTENSION)
@@ -54,7 +54,7 @@ kbf-$(T)-rqo.data:
 kbf-$(T)-ran-$(SEED).data:
 	$(GENERATOR) $(T) > kbf-$(T)-ran-$(SEED).qcnf 
 	$(RANDOMIZER) kbf-$(T)-ran-$(SEED).qcnf $(SEED)
-	$(SOLVER) -v $(VLEVEL) -i kbf-$(T)-ran-$(SEED).qcnf -p kbf-$(T)-ran-$(SEED).order -b \
+	$(SOLVER) -m r -v $(VLEVEL) -i kbf-$(T)-ran-$(SEED).qcnf -p kbf-$(T)-ran-$(SEED).order -b \
 		-o kbf-$(T)-ran-$(SEED).$(EXTENSION) | tee kbf-$(T)-ran-$(SEED).data
 	$(CHECKER) -i kbf-$(T)-ran-$(SEED).qcnf -p kbf-$(T)-ran-$(SEED).$(EXTENSION) | tee -a kbf-$(T)-ran-$(SEED).data
 	rm -f kbf-$(T)-ran-$(SEED).$(EXTENSION)
