Added VBc option

--- a/qbenchmarks/data-qproof/eden/Makefile
+++ b/qbenchmarks/data-qproof/eden/Makefile
@@ -20,6 +20,7 @@ C=4
 all: VBC
 
 VBC: goe-$(MODE)-$(R)x$(C)-VBC.data
+VBc: goe-$(MODE)-$(R)x$(C)-VBc.data
 vBC: goe-$(MODE)-$(R)x$(C)-vBC.data
 
 goe-$(MODE)-$(R)x$(C).qcnf:
@@ -36,6 +37,14 @@ goe-$(MODE)-$(R)x$(C)-VBC.data: goe-$(MODE)-$(R)x$(C).qcnf
 	        -c goe-$(MODE)-$(R)x$(C).cluster \
 	 	-i goe-$(MODE)-$(R)x$(C).qcnf -o goe-$(MODE)-$(R)x$(C).qproof | tee goe-$(MODE)-$(R)x$(C)-VBC.data
 	$(CHECK) -S -i goe-$(MODE)-$(R)x$(C).qcnf -p goe-$(MODE)-$(R)x$(C).qproof | tee -a goe-$(MODE)-$(R)x$(C)-VBC.data
+
+goe-$(MODE)-$(R)x$(C)-VBc.data: goe-$(MODE)-$(R)x$(C).qcnf
+	$(SOLVE) -m s -v $(VLEVEL) -b \
+		-B goe-$(MODE)-$(R)x$(C).border \
+	        -p goe-$(MODE)-$(R)x$(C).vorder \
+	 	-i goe-$(MODE)-$(R)x$(C).qcnf -o goe-$(MODE)-$(R)x$(C).qproof | tee goe-$(MODE)-$(R)x$(C)-VBc.data
+	$(CHECK) -S -i goe-$(MODE)-$(R)x$(C).qcnf -p goe-$(MODE)-$(R)x$(C).qproof | tee -a goe-$(MODE)-$(R)x$(C)-VBc.data
+
 
 goe-$(MODE)-$(R)x$(C)-vBC.data: goe-$(MODE)-$(R)x$(C).qcnf
 	$(SOLVE) -m s -b \
