--- a/qbenchmarks/data-depqbf/nim/Makefile
+++ b/qbenchmarks/data-depqbf/nim/Makefile
@@ -24,10 +24,21 @@ CAT=
 all: oa
 
 oa: nimoa$(CAT)-$(PROFILE).data
+ua: nimua$(CAT)-$(PROFILE).data
+ue: nimue$(CAT)-$(PROFILE).data
 
 nimoa$(CAT)-$(PROFILE).data:
 	$(GEN) -e o -t a -p $(PROFILE) -r nimoa$(CAT)-$(PROFILE)
 	$(SOLVE) nimoa$(CAT)-$(PROFILE).qcnf | tee nimoa$(CAT)-$(PROFILE).data
+
+nimua$(CAT)-$(PROFILE).data:
+	$(GEN) -e u -t a -p $(PROFILE) -r nimua$(CAT)-$(PROFILE)
+	$(SOLVE) nimua$(CAT)-$(PROFILE).qcnf | tee nimua$(CAT)-$(PROFILE).data
+
+nimue$(CAT)-$(PROFILE).data:
+	$(GEN) -e u -t e -p $(PROFILE) -r nimue$(CAT)-$(PROFILE)
+	$(SOLVE) nimue$(CAT)-$(PROFILE).qcnf | tee nimue$(CAT)-$(PROFILE).data
+
 
 clean:
 	rm -f *~ 
